$Id$

2012-11-19  Alex Samorukov  <samm@os2.kiev.ua>

	smartctl: supports progress indicator on selftests 
	smartctl: prints rotation speed for SCSI drives, if supported
	smartctl: add headers to SCSI output, fix data blocks formatting, 
	trim identification data
	os_linux.cpp: add autodetection for PERC H700 array

2012-11-18  Alex Samorukov  <samm@os2.kiev.ua>

	smartd.cpp: implement error counters and temperature saving to the 
	attrlog file for SCSI devices.
	smartd.cpp: added reset_warning_mail() if device is working for SCSI

2012-11-18  Christian Franke  <franke@computer.org>

	drivedb.h: Western Digital Caviar Green: Add -F xerrorlba

2012-11-17  Alex Samorukov  <samm@os2.kiev.ua>

	smartd.cpp: print lu_id for SPC devices, it is supported by standard
	smartd.cpp: added initial state file support for the SCSI devices
	smartd.cpp: add S/N to SCSI device identifier, lu_id is not available
	on some drives.
	smartd.cpp: fix warning for SCSI drives with self test in progress (#249)
	drivedb.h: added -F xerrorlba flag Seagate Barracuda LP/CC32

2012-11-09  Christian Franke  <franke@computer.org>

	Windows smartd: Allow quoting of '-M exec' argument
	to support path names with spaces.

2012-11-09  Christian Franke  <franke@computer.org>

	ataprint.cpp: Rework smartctl -l directory output.
	Add R/W, R/O info.  Report identical logs in one line.

2012-11-09  Alex Samorukov  <samm@os2.kiev.ua>

	os_freebsd.cpp: adding handling of SCSI devices exported with mfip
	driver. FreeBSD changing PDT code to 0x1f and we are changing it back
	to 0x00 (direct-access block device).
	os_freebsd.cpp: improved error handling for the ATA devices

2012-11-04  Christian Franke  <franke@computer.org>

	drivedb.h:
	- SandForce Driven SSDs: Mushkin Chronos
	- Indilinx Everest/Martini based SSDs: OCZ AGILITY4
	- Intel 710 Series SSDs: Add attribute 174
	- JMicron based SSDs: KINGSTON SSDNOW 30GB
	- Hitachi Deskstar 7K1000.C: *CLA330
	- Seagate DiamondMax 23, Barracuda 7200.12, 7200.14 (AF),